@startuml

title __ELEMENTFILESYSTEM's Class Diagram__\n

  namespace  {
    class Directory {
    }
  }
  

  namespace  {
    abstract class ElementFileSystem {
    }
  }
  

  namespace  {
    class File {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  Directory -up-|> ElementFileSystem
  ElementFileSystem o-- Directory : parentDirectory
  File -up-|> ElementFileSystem


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
